syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

/*
 * Response to a ShiftPreset message with the status of the command
 */
message ShiftPresetStatus {
    // Preset shifted
    required int32 indexToShiftFrom = 1;
    // Destination
    required int32 indexToShiftTo = 2;
}
