syntax = "proto2";

message SwapPresetStatus {
    required int32 indexA = 1;
    required int32 indexB = 2;
}
